# synergy-hangul-fix

./: Cargo.toml  README.md  README_kr.md
.github/workflows/: release.yml
src/: main.rs
