[package]
name = "synergy-hangul-fix"
version = "0.2.0"
edition = "2021"
description = "Fix Korean (Hangul) input toggle when using Synergy/Deskflow from Mac to Windows"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Input_Ime",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
